ingress/ingress-prod.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: drupal-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - ingress3.ryanhyma.com
    secretName: ingress3-tls-secret-prod
  rules:
  - host: ingress3.ryanhyma.com
    http:
      paths:
      - backend:
          serviceName: drupal-nginx
          servicePort: 80
        path: /
